Validate Qualifiers at compile time (#645)
* validate qualifiers at compile time

* remove transitive aop and events from inject test

* fix tests

* fix optional types

* final test

* fix event publishers not getting detected

* refactor reading external modules

* Revert "refactor reading external modules"

This reverts commit 96c3a949a7a5b1bee1c05c58c2a71e5e30379ba9.

* Add Util.addQualifierSuffix() helper methods

* Format changes

* Move and adjust the test to QualifierCircularDependency etc

---------

Co-authored-by: Rob Bygrave <robin.bygrave@gmail.com>